# ApplyFlow

./: .gitignore  Design.html  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .env.example  pyproject.toml  railway.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 73f1526e6c2c_initial.py  a1b2c3d4e5f6_job_observations.py  b3e8f2a1c9d7_resume_type_and_job_url.py  c4a7d1e8f302_user_profiles.py  d5f3a2b8e1c9_resume_pdf_bytes.py  e6f4a3b1d2c8_fingerprint_fields.py  f7b2c3d4e5a1_ats_metadata.py  g8c5d4e6f7b3_notifications.py  h9d6e5f7g8b4_stripe_and_usage.py  i1e7f8g9h0b5_cascade_delete_on_user_fks.py  j2f8g9h0i1b6_add_has_had_pro_to_users.py  k3g9h0i1j2c7_add_tailor_sessions_to_usage.py  l4h0i1j2k3d8_add_edit_count_to_resumes.py  m5i1j2k3l4e9_add_downloaded_to_resumes.py  n6j2k3l4m5f0_email_verification.py  o7k3l4m5n6g1_add_password_reset_tokens.py  p8l4m5n6o7h2_composite_index_application_user_status.py  q9m5n6o7p8i3_rename_stripe_to_razorpay.py
apps/api/app/: main.py  models.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: ai.py  applications.py  auth.py  autofill.py  billing.py  jobs.py  notifications.py  observations.py  profile.py  resumes.py
apps/api/app/core/: config.py  database.py  deps.py  email.py  email_validation.py  limiter.py  usage.py  watermark.py
apps/api/tests/: conftest.py  test_applications.py  test_autofill.py
apps/extension/: .env.example  TECHNICAL_ARCHITECTURE.md  manifest.json  package.json  popup.html  vite.config.ts  vitest.config.ts
apps/extension/src/: vite-env.d.ts
apps/extension/src/__tests__/: application-session.test.ts  autofill-steps.test.ts  cross-portal-continuity.test.ts  fingerprint.test.ts  lifecycle-events.test.ts  (+4 more)
apps/web/: .env.local.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/: middleware.ts
(+135 files in other folders)
