[project]
name = "applyflow-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.40",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "anthropic>=0.52.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pypdf>=5.5.0",
    "python-docx>=1.1.2",
    "httpx>=0.28.1",
    "stripe>=11.0.0",
    "slowapi>=0.1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "ruff>=0.11.12",
    "mypy>=1.16.0",
]
